skeleton/.submitscript/src/bootstrap.log
Identified Python 3.9.1 at /usr/bin/python3.9
[Bootstrap] Identified pip 21.2.2 from /home/lukas/.local/lib/python3.9/site-packages/pip (python 3.9)' at /usr/bin/python3.9 -m pip
[Bootstrap] Identified 'pipenv, version 2021.5.29' at /usr/bin/python3.9 -m pipenv
[Bootstrap] Running '/usr/bin/python3.9 -m pipenv install --python 3.9' to ensure the existence of a virtual environment.
[Bootstrap] This may take a moment.
Virtualenv already exists!
Removing existing virtualenv...
Creating a virtualenv for this project...
Pipfile: /mnt/d/Projekte/THM/cb_bs_ksp/compilerbau/praktikum/skeleton/.submitscript/src/Pipfile
Using /usr/bin/python3.9 (3.9.1) to create virtualenv...
⠋ Creating virtual environment...⠙ Creating virtual environment...⠹ Creating virtual environment...⠸ Creating virtual environment...⠼ Creating virtual environment...⠴ Creating virtual environment...⠦ Creating virtual environment...⠧ Creating virtual environment...⠇ Creating virtual environment...⠏ Creating virtual environment...⠋ Creating virtual environment...⠙ Creating virtual environment...⠹ Creating virtual environment...⠸ Creating virtual environment...⠼ Creating virtual environment...⠴ Creating virtual environment...⠦ Creating virtual environment...created virtual environment CPython3.9.1.final.0-64 in 1159ms
  creator CPython3Posix(dest=/home/lukas/.local/share/virtualenvs/src-QeEIxOKu, clear=False, global=False)
  seeder FromAppData(download=False, idna=latest, distlib=latest, msgpack=latest, lockfile=latest, pytoml=latest, retrying=latest, requests=latest, setuptools=latest, pep517=latest, chardet=latest, webencodings=latest, CacheControl=latest, ipaddr=latest, certifi=latest, urllib3=latest, wheel=latest, appdirs=latest, packaging=latest, html5lib=latest, six=latest, pip=latest, colorama=latest, progress=latest, pkg_resources=latest, pyparsing=latest, contextlib2=latest, distro=latest, via=copy, app_data_dir=/home/lukas/.local/share/virtualenv/seed-app-data/v1.0.1.debian)
  activators BashActivator,CShellActivator,FishActivator,PowerShellActivator,PythonActivator,XonshActivator

✔ Successfully created virtual environment! 
Virtualenv location: /home/lukas/.local/share/virtualenvs/src-QeEIxOKu
Installing dependencies from Pipfile.lock (da6003)...
To activate this project's virtualenv, run pipenv shell.
Alternatively, run a command inside the virtualenv with pipenv run.
[Bootstrap] Running the script in a virtual environment.
/usr/bin/python3.9 -m pipenv run python3 ./main.py
=== Welcome ===
There is no team.json saved yet. You will need to provide information about your team before you can submit solutions.
A new team.json will now be created.

Please enter details of team member 1.
Last Name:  First Name:  Matriculation number:  
First name: Lukas; Last name: Gail; Matriculation number: 112345
Is this correct? [y/N] Another? [Y/n] team.json successfully created.

Do you want to submit a solution now? [Y/n] 
=== Submitting ===
Please choose the assignment you want to submit. 
 1 - Aufgabe-1
 2 - Aufgabe-2
Please enter the id of your selection: 
Please choose the variant you want to submit. 
 1 - Java SPL Compiler
 2 - C SPL Compiler
Please enter the id of your selection: 
Selected variant 'C SPL Compiler' for assignment 'Aufgabe-1'.
=== Building submission ===
Running 'cmake . && make'.
=== Building submission finished ===
Building your solution failed!
Do you want to view the build log? [Y/n] === BEGIN Build Log ===
-- The C compiler identification is GNU 9.3.0
-- Check for working C compiler: /usr/bin/cc
-- Check for working C compiler: /usr/bin/cc -- works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Detecting C compile features
-- Detecting C compile features - done
-- Found BISON: /usr/bin/bison (found version "3.5.1") 
-- Found FLEX: /usr/bin/flex (found version "2.6.4") 
-- Configuring done
-- Generating done
-- Build files have been written to: /tmp/tmpoglr507r/c
Scanning dependencies of target _generated_source_folder_dummy_target
[  0%] Built target _generated_source_folder_dummy_target
[  3%] [FLEX][SCANNER] Building scanner with flex 2.6.4
[  6%] [BISON][PARSER] Building parser with bison 3.5.1
Scanning dependencies of target spl
[  9%] Building C object CMakeFiles/spl.dir/generated-sources/phases/_02_03_parser/parser.c.o
[ 12%] Building C object CMakeFiles/spl.dir/generated-sources/phases/_01_scanner/scanner.c.o
/tmp/tmpoglr507r/c/src/phases/_01_scanner/scanner.flex:85:16: warning: ‘symbolIntVal’ defined but not used [-Wunused-function]
   85 |      * @param type The token type that was detected (should always be INTLIT).
      |                ^~~~~~~~~~~~
/tmp/tmpoglr507r/c/src/phases/_01_scanner/scanner.flex:70:16: warning: ‘symbolIdentVal’ defined but not used [-Wunused-function]
   70 |      * @param type The token type that was detected (should always be IDENT).
      |                ^~~~~~~~~~~~~~
/tmp/tmpoglr507r/c/src/phases/_01_scanner/scanner.flex:56:16: warning: ‘symbol’ defined but not used [-Wunused-function]
   56 |      *
      |                ^     
/tmp/tmpoglr507r/c/src/phases/_01_scanner/scanner.flex:44:17: warning: ‘advancePositionToNextLine’ defined but not used [-Wunused-function]
   44 |      * Advances the current position counter to the start of the next line.
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~
[ 15%] Building C object CMakeFiles/spl.dir/src/absyn/expressions.c.o
/tmp/tmpoglr507r/c/src/absyn/expressions.c: In function ‘isOperatorArithmetic’:
/tmp/tmpoglr507r/c/src/absyn/expressions.c:14:42: warning: unused parameter ‘operator’ [-Wunused-parameter]
   14 | bool isOperatorArithmetic(BinaryOperator operator) {
      |                           ~~~~~~~~~~~~~~~^~~~~~~~
/tmp/tmpoglr507r/c/src/absyn/expressions.c: In function ‘isOperatorComparison’:
/tmp/tmpoglr507r/c/src/absyn/expressions.c:18:42: warning: unused parameter ‘operator’ [-Wunused-parameter]
   18 | bool isOperatorComparison(BinaryOperator operator) {
      |                           ~~~~~~~~~~~~~~~^~~~~~~~
/tmp/tmpoglr507r/c/src/absyn/expressions.c: In function ‘flipComparisonOperator’:
/tmp/tmpoglr507r/c/src/absyn/expressions.c:22:54: warning: unused parameter ‘operator’ [-Wunused-parameter]
   22 | BinaryOperator flipComparisonOperator(BinaryOperator operator) {
      |                                       ~~~~~~~~~~~~~~~^~~~~~~~
/tmp/tmpoglr507r/c/src/absyn/expressions.c: In function ‘newExpression’:
/tmp/tmpoglr507r/c/src/absyn/expressions.c:48:9: error: ‘Expression’ {aka ‘struct expression’} has no member named ‘ershovNumber’
   48 |     node->ershovNumber = -1;
      |         ^~
/tmp/tmpoglr507r/c/src/absyn/expressions.c: In function ‘isOperatorArithmetic’:
/tmp/tmpoglr507r/c/src/absyn/expressions.c:16:1: warning: control reaches end of non-void function [-Wreturn-type]
   16 | }
      | ^
/tmp/tmpoglr507r/c/src/absyn/expressions.c: In function ‘isOperatorComparison’:
/tmp/tmpoglr507r/c/src/absyn/expressions.c:20:1: warning: control reaches end of non-void function [-Wreturn-type]
   20 | }
      | ^
/tmp/tmpoglr507r/c/src/absyn/expressions.c: In function ‘flipComparisonOperator’:
/tmp/tmpoglr507r/c/src/absyn/expressions.c:24:1: warning: control reaches end of non-void function [-Wreturn-type]
   24 | }
      | ^
make[2]: *** [CMakeFiles/spl.dir/build.make:104: CMakeFiles/spl.dir/src/absyn/expressions.c.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:104: CMakeFiles/spl.dir/all] Error 2
make: *** [Makefile:84: all] Error 2
=== END Build Log ===
Do you want to submit your solution anyway, despite the failing build? [y/N] Aborting submission.

Do you want to try again? [Y/n] 
=== Submitting ===
Please choose the assignment you want to submit. 
 1 - Aufgabe-1
 2 - Aufgabe-2
Please enter the id of your selection: 
Please choose the variant you want to submit. 
 1 - Java SPL Compiler
 2 - C SPL Compiler
Please enter the id of your selection: 
Selected variant 'C SPL Compiler' for assignment 'Aufgabe-1'.
=== Building submission ===
Running 'cmake . && make'.
=== Building submission finished ===
=== Cleaning directory for submission ===
=== Cleaning directory finished ===
=== Starting Upload ===
=== Upload finished ===
=== BEGIN Upload Log
[2021-10-14 14:11:31.283615] Received submission 9efcf8a3-5290-48c1-8a76-56537cc6218f
[2021-10-14 14:11:31.284832] Ip: 10.196.97.154
[2021-10-14 14:11:31.284938] Team members: [('Gail', 'Lukas', '112345')]
[2021-10-14 14:11:31.287723] Your submission was REJECTED.
[2021-10-14 14:11:31.287808] Reason: Assignment Aufgabe-1 in course Compilerbau-ws21 is not currently enabled.

=== END Upload Log
Submitting your solution failed. Please see the upload log above for more details.

Do you want to try again? [Y/n] 